# a320-cli

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md
.claude/agents/: fbw-scout.md  python-api-dev.md  rust-core-dev.md  scenario-engineer.md
.claude/skills/compilar-core/: SKILL.md
.claude/skills/estado-proyecto/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  task.yml
.github/workflows/: ci.yml
bench/: README.md  pyproject.toml
bench/a320_bench/: __init__.py  cli.py  episode.py  recorder.py  scenario.py  serve.py
bench/a320_bench/providers/: __init__.py  base.py  litellm_adapter.py  scripted.py
bench/tests/: test_episode_scripted.py  test_litellm_adapter.py  test_recorder.py  test_scenario_schema.py  test_serve.py
bindings/: Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
bindings/src/: lib.rs
bindings/tests/: test_smoke.py
cli/: README.md  pyproject.toml
cli/a320_cli/: __init__.py  __main__.py  launcher.py  repl.py
core-rs/: Cargo.toml  rust-toolchain.toml
core-rs/src/: api.rs  controls.rs  ecam.rs  engine.rs  environment.rs  failures.rs  lib.rs  main.rs  runtime.rs  variables.rs
core-rs/tests/: apu_slice.rs  cold_dark_to_engines_running.rs  electrical_slice.rs  engine_cross_system.rs  engine_start.rs  failure_injection.rs  fuel_slice.rs  generator_caution.rs  hydraulic_slice.rs
docs/: decisiones.md  fase1-runtime.md  fase2-ecam.md  fase4-motor.md  faseT-tui.md  lecciones.md  releases.md
mcp/: README.md  pyproject.toml
mcp/a320_mcp/: __init__.py  __main__.py  server.py
mcp/tests/: test_server.py
scenarios/: README.md
scenarios/elec/: apu_gen_fault.yaml  eng1_gen_fault.yaml
scenarios/schema/: scenario.schema.json
scripts/: bootstrap-vendor.ps1
tui/: README.md  pyproject.toml
tui/a320_tui/: __init__.py  __main__.py  app.py  cockpit_state.py  commands.py  controller.py  manifest.py  sim_bridge.py  state.py  wiring.py
tui/a320_tui/layouts/: __init__.py  glareshield.py  main_panel.py  overhead.py  pedestal.py
tui/a320_tui/model/: __init__.py  a320-controls-model.yaml  loader.py
tui/a320_tui/styles/: app.tcss
tui/a320_tui/widgets/: __init__.py  annunciator.py  base.py  elec_synoptic.py  ewd.py  fire_button.py  guarded_button.py  key_group.py  korry_button.py  lever.py  overhead_panel.py  quadrant.py  rotary.py  status_bar.py  switch.py  wheel.py  zone_panel.py
tui/docs/: cockpit-layout.md  overhead-layout.md  pedestal-layout.md
tui/tests/: test_app_elec_e2e.py  test_cockpit_state.py  test_layouts.py  test_manifest.py  test_model.py  test_synoptic_render.py  test_widget_render.py  test_wiring.py
