[package]
name = "a320-sim-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
systems = { path = "vendor/aircraft/fbw-common/src/wasm/systems/systems" }
a320_systems = { path = "vendor/aircraft/fbw-a32nx/src/wasm/systems/a320_systems" }
uom = "0.37.0"
# `Simulation::update_active_failures` toma un `FxHashSet<FailureType>`, así que
# el tipo tiene que ser EL MISMO que compila `systems`: misma versión que declara
# su Cargo.toml. No es una dependencia de conveniencia, es el tipo del contrato.
rustc-hash = "2.1.1"

# Paquete independiente: no pertenece al workspace del vendor. El exclude es
# imprescindible: sin él, cargo intenta resolver la herencia `workspace = true`
# de los crates vendorizados contra ESTE workspace en vez del suyo propio.
[workspace]
exclude = ["vendor"]
